--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2> Somos un grupo de personas dispuestas a brindale lo mejor a los seres mas amados del hogar </h2>
 
             <p>
-               <marquee behavior=" ¡BIENVENIDOS A NUESTRA PAGINA!" direction=""></marquee> Aca vas a poder encontrar todo lo que necesitas para el peludo del hogar. Contamos con amplia variedad de alimentos y juguetes para que ellos crezcan en ambientes llenos de aprendizaje y diversion.
+               <marquee behavior=" ¡BIENVENIDOS A NUESTRA PAGINA!" direction="up"></marquee> Aca vas a poder encontrar todo lo que necesitas para el peludo del hogar. Contamos con amplia variedad de alimentos y juguetes para que ellos crezcan en ambientes llenos de aprendizaje y diversion.
             </p>
         </div>
         <div class="contenedor">
