--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LosMimados</title>
     <link rel="shortcut icon" href="img/Logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -34,7 +36,9 @@
             <h2> Somos un grupo de personas dispuestas a brindale lo mejor a los seres mas amados del hogar </h2>
 
             <p>
-               <marquee behavior=" ¡BIENVENIDOS A NUESTRA PAGINA!" direction="up"></marquee> Aca vas a poder encontrar todo lo que necesitas para el peludo del hogar. Contamos con amplia variedad de alimentos y juguetes para que ellos crezcan en ambientes llenos de aprendizaje y diversion.
+                <marquee behavior=" ¡BIENVENIDOS A NUESTRA PAGINA!" direction="up"></marquee> Aca vas a poder encontrar
+                todo lo que necesitas para el peludo del hogar. Contamos con amplia variedad de alimentos y juguetes
+                para que ellos crezcan en ambientes llenos de aprendizaje y diversion.
             </p>
         </div>
         <div class="contenedor">
@@ -71,7 +75,9 @@
         <a class="Facebook" href="https://www.facebook.com/">facebook</a>
         <span>Mimados 2022</span>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
