--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,46 +2,53 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto</title>
-  <link rel="shortcut icon" href="img/Logo.png" >
-  <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="shortcut icon" href="img/Logo.png">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-  <header>
-    <nav class="Navegador">
-      <img class="Logo" src="../img/Logo.png" alt="logo">
-      <ul>
-        <a href="../Index.html">|Inicio|</a>
-        <a href="Productos.html">|Productos|</a>
-        <a href="Sucursales.html">|Sucursales|</a>
-        <a href="#">|Contacto|</a>
-        <a href="Usuario.html">|Iniciar Sesion|</a>
-      </ul>
-    </nav>
-    <h1>Contactanos para que estemos mas cerca ❤</h1>
-  </header>
+    <header>
+        <nav class="Navegador">
+            <img class="Logo" src="../img/Logo.png" alt="logo">
+            <ul>
+                <a href="../Index.html">|Inicio|</a>
+                <a href="Productos.html">|Productos|</a>
+                <a href="Sucursales.html">|Sucursales|</a>
+                <a href="#">|Contacto|</a>
+                <a href="Usuario.html">|Iniciar Sesion|</a>
+            </ul>
+        </nav>
+        <h1>Contactanos para que estemos mas cerca ❤</h1>
+    </header>
 
-  <main>
-    <form class="Contacto" action="">
-      <label for="name">Nombre</label><br>
-      <input type="text" name="name" id="name"><br>
-      <label for="lastname">Apellido</label><br>
-      <input type="lastname" name="lastname" id="lastname"><br>
-      <label for="number">Numero telefonico</label><br>
-      <input type="number" name="number" id="number"><br>
-      <label for="email">Email</label><br>
-      <input type="Email" name="email" id="email"><br>
-      <label for="recibirnoticias">Recibir Noticias</label><br>
-      <input type="checkbox" name="recibirnoticias" id="recibirnoticias"><br>
-      <input type="submit" value="Enviar">
-    </form>
-  </main>
+    <main>
+        <form class="Contacto" action="">
+            <label for="name">Nombre</label><br>
+            <input type="text" name="name" id="name"><br>
+            <label for="lastname">Apellido</label><br>
+            <input type="lastname" name="lastname" id="lastname"><br>
+            <label for="number">Numero telefonico</label><br>
+            <input type="number" name="number" id="number"><br>
+            <label for="email">Email</label><br>
+            <input type="Email" name="email" id="email"><br>
+            <label for="recibirnoticias">Recibir Noticias</label><br>
+            <input type="checkbox" name="recibirnoticias" id="recibirnoticias"><br>
+            <input type="submit" value="Enviar">
+        </form>
+    </main>
 
-  <footer>Mimados 2022</footer>
+    <footer>Mimados 2022</footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
