--- a/pages/Usuario.html
+++ b/pages/Usuario.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesion</title>
-    <link rel="shortcut icon" href="img/Logo.png" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="shortcut icon" href="img/Logo.png">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -20,6 +22,7 @@
                 <a href="Sucursales.html">|Sucursales|</a>
                 <a href="Contacto.html">|Contacto|</a>
                 <a href="#">|Iniciar Sesion|</a>
+
             </ul>
         </nav>
 
@@ -27,19 +30,35 @@
         <img class="Ingresar" src="https://www.perrogatoland.com/img/cms/shutterstock_174700667.jpg" alt="Ingreso">
         <main>
 
-            <form action class="Usuario">
-                <label for="Usuario">Usuario</label>
-                <input type="text" name="nombre" id="name"><br>
-                <label for="Contraseña">Contraseña</label>
-                <input type="text" name="passoword" id="passoword">
-                <input type="submit" value="Ingresar">
+            <form>
+                <div class="row mb-3">
+                    <label for="inputEmail3" class="col-sm-2 col-form-label">Usuario</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="inputPassword3" class="col-sm-2 col-form-label">Contraseña</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword3">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-sm-10 offset-sm-2">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                                Recordar usuario
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success">Ingresar</button>
             </form>
 
-            <div class="Redes">
-                <a href="https://www.instagram.com/">instagram</a>
-                <a href="https://twitter.com/home">twitter</a>
-                <a href="https://www.facebook.com/">facebook</a>
-            </div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous"></script>
 
         </main>
         <footer>
