--- a/index.html
+++ b/index.html
@@ -38,13 +38,63 @@
                     </h2>
 
                     <p>
-                        <marquee behavior=" ¡BIENVENIDOS A NUESTRA PAGINA!" direction="up"></marquee> Aca vas a poder
+                        ¡BIENVENIDOS A NUESTRA PAGINA! Aca vas a poder
                         encontrar
                         todo lo que necesitas para el peludo del hogar. Contamos con amplia variedad de alimentos y
                         juguetes
                         para que ellos crezcan en ambientes llenos de aprendizaje y diversion.
                     </p>
                 </div>
+
+                <div col-sm-12>
+
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/PromoMier.png" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>MIERCOLES DE DESCUENTOS</h5>
+                                    <p>Some representative placeholder content for the first slide.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/PromoGatos.png" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>LUNES GATUNOS</h5>
+                                    <p>Some representative placeholder content for the second slide.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/NuevosProd.png" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>INGRESOS</h5>
+                                    <p>Some representative placeholder content for the third slide.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+
+
+                </div>
+
                 <div>
                     <div class="Perros col-sm-12">
                         <img src="https://static2.abc.es/media/ciencia/2022/04/28/AdobeStock_293422760-kvsC--620x349@abc.jpg"
@@ -82,6 +132,7 @@
         <a class="Facebook" href="https://www.facebook.com/">facebook</a>
         <span>Mimados 2022</span>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
