agregando al index

--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -102,55 +102,51 @@
        <div class="ElementosGatos">
       
         <div class="card" style="width: 18rem;">
-            <img src="../img/Cama.png" class="card-img-top" alt="...">
+            <img src="../img/rascador.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Cama Peluche $1.500</h5>
-                <p class="card-text">Para que duerman comodos y calentitos...Tamaños desde S a XXL</p>
+                <h5 class="card-title">Arbol Rascador $1500</h5>
+                <p class="card-text">Juegutes Interactivo</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
             </div>
         </div>
 
         <div class="card" style="width: 18rem;">
-            <img src="../img/carrito.png" class="card-img-top" alt="...">
+            <img src="../img/Camita.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Cochecito $3.000</h5>
-                <p class="card-text">La nueva novedad del mercado ya llego a Los Mimados. Desde ahora los paseos
-                    son
-                    mas comodos</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
-
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="../img/hueso.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Hueso $600</h5>
-                <p class="card-text">Lo mejor para lalimpieza de sus dientes,ademas de que se entretienen y
-                    entrenan
-                    su mordida.</p>
+                <h5 class="card-title">Cama $2.000</h5>
+                <p class="card-text">Para que duerman comodos y calentitos...Tamaños desde XS a XL</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
             </div>
 
         </div>
 
         <div class="card" style="width: 18rem;">
-            <img src="../img/Pretal.png" class="card-img-top" alt="...">
+            <img src="../img/Comida.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Combo paseo $1.800</h5>
-                <p class="card-text">bueno,barato y bonito lo mejor para los paseos.</p>
+                <h5 class="card-title">Alimento balanceado $4.000</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe doloribus laudantium officiis obcaecati, alias expedita natus labore vero. Eaque eum error recusandae sint, blanditiis quam placeat voluptate iure beatae distinctio?
+                    </p>
                 <a href="#" class="btn btn-primary">Comprar</a>
             </div>
 
         </div>
 
         <div class="card" style="width: 18rem;">
-            <img src="../img/Comedor.png" class="card-img-top" alt="...">
+            <img src="../img/alimento.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Comedor y bebedero $2.000</h5>
-                <p class="card-text">Transportable y elegante,para que tu mascota pueda tenerlo en donde sea
-                    cuando
-                    lo necesite</p>
+                <h5 class="card-title">Alimento balanceado</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti odio asperiores distinctio maiores quos quisquam debitis laudantium dolore, enim in optio. Nobis, laboriosam eos? Necessitatibus quod corporis suscipit molestiae culpa.
+                </p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="../img/Pelo.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Cepillo $1500</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, animi? Libero alias dolorem vel voluptatem labore, veniam quisquam incidunt ex minima neque velit ea iure saepe explicabo, nulla sapiente odio.</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
             </div>
 
