--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
     <main>
         <div class="GridContainer">
             <div>
-                <div class="animate__animated animate__heartBeat ">
+                <div>
 
                     <div class="Saludo">
                    
-                        <div class="cuadro">
+                        <div class="cuadro" >
 
                             <p>
                                 Los creadores de Los Mimados:
                             </p>
 
-                            <div class="Creadores">
+                            <div class="Creadores  animate__animated  animate__jello "  >
     
                                 <img src="img/Ana.png" alt="">
                                 <img src="img/Santiago.png" alt=""><br>
